test/testdata/number/invalid_property_access_error.lox
// error: property access is not valid for 'number' object
// lint warning: property 'y' has not been declared or assigned anywhere
1.y;
